--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        
+
+        <script src="js/vendor/toggles-switches.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
